1998-10-14  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Qualify Free procedure so that it doesn't clash
	with GNAT 3.12w GNAT.OS_Lib.Free.

1998-10-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_back.adb, xe_back.ads: New function Is_RCI_Or_SP_unit.

	* xe_check.adb: Substitute any access to Units.Table (U).RCI by
	Is_RCI_Or_SP_Unit in order to handle SP units the same way we
	handle RCI units.

	* xe_stubs.adb: Same as above. Modify Callers table which now
	stores unit ids rather than unit names. Modify call to Check to
	take new parameter RCI into account.

1998-10-05  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_lead.adb: Use correct file name for Ada starter. Checked in
	for Pascal Obry.

1998-09-24  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_stubs.adb: Use -s for linking to strip an executable rather
	than calling Execute_Strip.

	* xe_utils.ads, xe_utils.adb: Remove procedure Execute_Strip since 
	we do now stripping using the -s flag (strip does not work well on 
	Windows NT and erases the resources).

1998-08-20  Samuel Tardieu  <sam@inf.enst.fr>

	* xe_utils.adb: Change instances of Dont_Execute by Do_Not_Execute 
	to match GNAT sources.

	* xe_check.adb: Likewise.

	* xe_parse.adb: Minor reformatting.

1998-08-18  Laurent Pautet  <pautet@scapin.enst.fr>

	* xe_stubs.adb: Don't check version on RCI generic unit. Bug
	introduced by latest checkins.

1998-08-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am, Makefile.in: Remove flag -a as we are not supposed
	to check gnat library.

	* xe_back.adb: Provide 'Image to some GLADE enuerate types.

	* xe.ads: Add new reconnection attribute and reconnection
	enumerate type.

	* xe_back.adb: Reformat some output messages and handle
 	reconnection attribute. Add function To_Build which returns True
 	when an unit has to be built because it explictly mapped on a
	partition in the configuration file.

	* xe_back.ads: Add a set of subprograms to handle reconnection
 	attribute.
